# EntropyShield

./: .gitignore  CLAUDE.md  CONCEPT_PAPER.md  ENTROPYSHIELD_PROTOCOL.md  LICENSE  README.md  README_zh-TW.md  RELATED_WORK.md  pyproject.toml
entropyshield/: __init__.py  __main__.py  adaptive_reader.py  code_shield.py  detector.py  entropy_harvester.py  fragmenter.py  mcp_server.py  mode1_stride_masker.py  safe_fetch.py  shield.py
examples/: adaptive_reading.py  basic_defense.py
experiments/: README.md  customer_service_attack_test.py  deepset_benchmark.py  deepset_results_20260216_061810.jsonl  deepset_results_20260216_061810.rejudged.jsonl  deepset_results_20260216_070323.jsonl  deepset_results_20260216_161707.jsonl  delimiter_injection_benchmark.py  embedding_tolerance_test.py  llm_rejudge.py  shield_behavior_test.md  test_stride_masker.py  token_cost_analysis.md
experiments/agentdojo/: entropyshield_defense.py  entropyshield_defense_mode2.py  entropyshield_defense_nlp.py  entropyshield_defense_title.py  run_benchmark.py
experiments/agentdojo/test_fixtures/: attack_tool_outputs.yaml  normal_tool_outputs.yaml  test_defense_on_fixtures.py  test_nlp_smoke.py
experiments/clean_files/: sample_config.yaml  sample_utils.py
experiments/datasets/: deepset_prompts.json
experiments/payloads/: TEMPLATE_README.md
tool_defense/: README.md  THREAT_REPORT.md  __init__.py  __main__.py  patterns.py  reporter.py  scanner.py
tool_defense/scan_output/: .gitignore
tools/: safe_read.py
