[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropyshield"
version = "0.1.0"
description = "Deterministic Prompt Injection Defense via Semantic Fragmentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Weiktseng"},
]
keywords = [
    "llm",
    "prompt-injection",
    "ai-safety",
    "rag",
    "fragmentation",
    "desyntax",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
fetch = ["httpx>=0.25", "markdownify>=0.12"]
dev = ["pytest>=7.0", "httpx>=0.25", "markdownify>=0.12"]

[project.urls]
Homepage = "https://github.com/Weiktseng/EntropyShield"
Repository = "https://github.com/Weiktseng/EntropyShield"
Issues = "https://github.com/Weiktseng/EntropyShield/issues"

[project.scripts]
entropyshield = "entropyshield.__main__:main"

[tool.setuptools.packages.find]
include = ["entropyshield*"]
